# Pianix

./: CMakeLists.txt  device.cpp  device.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notewidget.cpp  notewidget.h  notewidget.ui  res.qrc
